tests/errors/signature.cfa
// No parameters
void  ?{}();
void ^?{}();
void  ?=?();
void  ?{}(void);
void ^?{}(void);
void  ?=?(void);

// Wrong parameters
void  ?{}(int);
void ^?{}(int);
void  ?=?(int);
void  ?{}(int *);
void ^?{}(int *);
void  ?=?(int *);
